tests/NormalTests/paczka1/fuzzy1/94033678.err
Error in line 2: XjwmqdPBga S393 27,1
Error in line 12: XjwmqdPBga A654 -1,4
Error in line 18: dDj A654 81,0
Error in line 19: CBhlUc8ko A654 32,0
Error in line 16: S878 S393 62,4
Error in line 11: XjwmqdPBga A654 60,5
Error in line 31: S878 A195 94,7
Error in line 33: uf0xV A195 73,1
Error in line 36: uf0xV S878 28,4
